@@ -106,6 +106,7 @@ importFrom("colorspace", diverge_hcl)
 importFrom("RColorBrewer", brewer.pal)
 importFrom("dendextend", get_branches_heights)
 importFrom("dendextend", nnodes)
+importFrom("dendextend", "labels<-")
 import(graphics)
 import(stats)
 import(grDevices)
