@@ -5,6 +5,7 @@ CHANEGS in VERSION 1.9.3
 * add `range` option in `densityHeatmap()`
 * when `gap` is set for the main heatmap, other heatmps also adjust their `gap` values to it
 * fixed a bug that when rownames/colnames are not complete, dendrograms are corrupted
+* `alter_fun` now support adding graphics grid by grid
 
 ==============================
 
